feat(frontend): implement professional logging framework
- Install loglevel library for production-ready logging
- Create centralized logger utility with environment-aware log levels
- Replace all console.log statements with appropriate logger methods
- Configure DEBUG level for development, WARN level for production
- Add fetch global to ESLint configuration
- Fix unused variable in GameController test
- Maintain no-console ESLint rule to prevent future console.log usage

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,11 +18,13 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "@stomp/stompjs": "^7.0.0"
+    "@stomp/stompjs": "^7.0.0",
+    "loglevel": "^1.9.2"
   },
   "devDependencies": {
     "@eslint/js": "^10.0.1",
     "@playwright/test": "^1.49.0",
+    "@types/loglevel": "^1.5.4",
     "@types/node": "^22.10.2",
     "@typescript-eslint/eslint-plugin": "^8.56.0",
     "@typescript-eslint/parser": "^8.56.0",
